--- a/css/screen.css
+++ b/css/screen.css
@@ -8,10 +8,19 @@
 
 :root {
     /* colors */
+    --color-light: hsla(208,100%,90%,1);
+    --color-dark: hsla(208,70%,20%,1);
 
+    --color-front: var(--color-dark);
+    --color-back: var(--color-light);
     /* opacity */
-
+    --global-muted-opacity: 0.6;
     /* transitions */
+}
+
+.is-night{
+    --color-front: var(--color-light);
+    --color-back: var(--color-dark);
 }
 
 /*------------------------------------*\
@@ -27,10 +36,14 @@
 html {
     font-size: 16px;
     line-height: 1.5;
-    font-family: Helvetica, arial, sans-serif;
+    font-family: 'Work Sans', sans-serif;
     box-sizing: border-box;
+    color:  var(--color-front);
+    background-color: var(--color-back);
+    font-feature-settings: "zero"1; /* dit zorgt voor de slashed 0 */
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
+
 }
 
 *,
@@ -46,15 +59,9 @@ html {
 * Customize the background color to match your design.
 */
 
-::-moz-selection {
-    background: red;
-    color: white;
-    text-shadow: none;
-}
-
 ::selection {
-    background: red;
-    color: white;
+    background: var(--color-front); /* kleur van selectie*/
+    color: var(--color-back); /* tekst kleur */
     text-shadow: none;
 }
 
@@ -249,7 +256,11 @@ input::placeholder {
 */
 
 .c-logo {
-
+    font-size: 16px;
+    line-height: 16px;
+    /* om zonnetje te centreren met text*/
+    display: flex;
+    align-items: center;
 }
 
 /*
@@ -258,12 +269,13 @@ input::placeholder {
     The sun
 */
 
-.c-sun {
-
+.c-sun { /*SVG atlijd inline!! inline zetten in de parent */
+    width: 22px;
+    fill: var(--color-front);
 }
 
 .c-logo .c-sun {
-
+    margin-right: 8px;
 }
 
 /*
@@ -272,12 +284,78 @@ input::placeholder {
     Main app wrapper
 */
 
+.c-app{
+    max-width: 29em; /* 400px (adobe xd) / 16 = 25em */
+    padding: 2em;
+    margin: 0 auto; 
+
+    /*BELANGRIJK!!!!!zorgen dat het tegen de bottom plakt!!!!*/
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    bottom: 0;
+}
+
+.c-app__summary{
+    font-size: 28px;
+    line-height: 40px; /* plaats tussen text*/
+}
+
 /*
     Component: Horizon
     ---
     Horizon with sun visualisation
 */
+.c-horizon{
+    /*!!!ZORGT DAT ALLES TEGEN DE BOTTOM PLAKT!!!*/
+    margin-top: auto;
+}
 
+.c-horizon__line{
+    border-top: 1px solid var(--color-front); /* dient om de lijn te tonen */
+    display: flex;
+    justify-content: space-between; /*dient voor de tijden uit elkaar te doen*/
+
+    padding-top: 8px;
+    margin-bottom: 32px;
+}
+
+.c-horizon__time{
+    font-size: 12px;
+    line-height: 16px;
+}
+
+.c-horizon__sky-wrapper {
+    position: relative;
+    height: 200px;
+    overflow: hidden; /*als iets buiten het element gaat kan je het niet meer zien*/
+    padding: 24px 40px 0 0;
+}
+
+.c-horizon__sky {
+    position: relative;
+    height: 100%;
+}
+
+.c-horizon__sun {
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 40px;
+    transform: translateY(22px); /*duwt alle zonnetjes naar beneden*/
+    /*zorgt ervoor dat het zonnetje net onder is om 8u en net niet onder is om 19u*/
+} 
+
+.c-horizon__sun::before{ /*tijd bij het zonnetje*/
+    display: block; /*zet tijd erboven*/
+    text-align: center;
+    content: attr(data-time); /*de data-time (HTML) erbij zetten !!!!!*/
+    font-size: 12px;
+    line-height: 16px;
+    margin-bottom: 8px;    
+}
 /*------------------------------------*\
 #UTILITIES
 \*------------------------------------*/
@@ -286,6 +364,10 @@ input::placeholder {
     Utilities: Mute
     Mute with opacity
 */
+
+.u-muted{
+    opacity: var(--global-muted-opacity);
+}
 
 /*------------------------------------*\
 #STATES
